// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`slider > rtl render > component should be rendered correctly in RTL direction 1`] = `
<div
  data-v-app=""
>
  <div
    class="ant-slider ant-slider-rtl css-var-root ant-slider-horizontal"
  >
    <div
      class="ant-slider-rail"
    />
    <!---->
    <div
      class="ant-slider-track"
      style="right: 0%; width: 0%;"
    />
    <div
      class="ant-slider-step"
    />
    <div
      aria-disabled="false"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="ant-slider-handle"
      mock="false"
      role="slider"
      style="right: 0%; transform: translateX(50%);"
      tabindex="0"
    />
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;

exports[`slider > should match snapshot 1`] = `
<div
  class="ant-slider css-var-root ant-slider-horizontal"
>
  <div
    class="ant-slider-rail"
  />
  <!---->
  <div
    class="ant-slider-track"
    style="left: 0%; width: 30%;"
  />
  <div
    class="ant-slider-step"
  />
  <div
    aria-disabled="false"
    aria-orientation="horizontal"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="30"
    class="ant-slider-handle"
    mock="false"
    role="slider"
    style="left: 30%; transform: translateX(-50%);"
    tabindex="0"
  />
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`slider > should match snapshot with marks 1`] = `
<div
  class="ant-slider css-var-root ant-slider-horizontal ant-slider-with-marks"
>
  <div
    class="ant-slider-rail"
  />
  <!---->
  <div
    class="ant-slider-track"
    style="left: 0%; width: 37%;"
  />
  <div
    class="ant-slider-step"
  >
    <span
      class="ant-slider-dot ant-slider-dot-active"
      style="left: 0%; transform: translateX(-50%);"
    />
    <span
      class="ant-slider-dot ant-slider-dot-active"
      style="left: 26%; transform: translateX(-50%);"
    />
    <span
      class="ant-slider-dot ant-slider-dot-active"
      style="left: 37%; transform: translateX(-50%);"
    />
    <span
      class="ant-slider-dot"
      style="left: 100%; transform: translateX(-50%);"
    />
  </div>
  <div
    aria-disabled="false"
    aria-orientation="horizontal"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="37"
    class="ant-slider-handle"
    mock="false"
    role="slider"
    style="left: 37%; transform: translateX(-50%);"
    tabindex="0"
  />
  <!---->
  <!---->
  <div
    class="ant-slider-mark"
  >
    <span
      class="ant-slider-mark-text ant-slider-mark-text-active"
      style="left: 0%; transform: translateX(-50%);"
    >
      0°C
    </span>
    <span
      class="ant-slider-mark-text ant-slider-mark-text-active"
      style="left: 26%; transform: translateX(-50%);"
    >
      26°C
    </span>
    <span
      class="ant-slider-mark-text ant-slider-mark-text-active"
      style="left: 37%; transform: translateX(-50%);"
    >
      37°C
    </span>
    <span
      class="ant-slider-mark-text"
      style="left: 100%; transform: translateX(-50%);"
    >
      100°C
    </span>
  </div>
</div>
`;

exports[`slider > should match snapshot with range 1`] = `
<div
  class="ant-slider css-var-root ant-slider-horizontal"
>
  <div
    class="ant-slider-rail"
  />
  <!---->
  <div
    class="ant-slider-track ant-slider-track-1"
    style="left: 20%; width: 30%;"
  />
  <div
    class="ant-slider-step"
  />
  <div
    aria-disabled="false"
    aria-orientation="horizontal"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    class="ant-slider-handle ant-slider-handle-1"
    mock="false"
    role="slider"
    style="left: 20%; transform: translateX(-50%);"
    tabindex="0"
  />
  <div
    aria-disabled="false"
    aria-orientation="horizontal"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="ant-slider-handle ant-slider-handle-2"
    mock="false"
    role="slider"
    style="left: 50%; transform: translateX(-50%);"
    tabindex="0"
  />
  <!---->
  <!---->
</div>
`;

exports[`slider > should match snapshot with vertical 1`] = `
<div
  class="ant-slider css-var-root ant-slider-vertical"
>
  <div
    class="ant-slider-rail"
  />
  <!---->
  <div
    class="ant-slider-track"
    style="bottom: 0%; height: 30%;"
  />
  <div
    class="ant-slider-step"
  />
  <div
    aria-disabled="false"
    aria-orientation="vertical"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="30"
    class="ant-slider-handle"
    mock="false"
    role="slider"
    style="bottom: 30%; transform: translateY(50%);"
    tabindex="0"
  />
  <!---->
  <!---->
  <!---->
</div>
`;
